# markovify

./: .gitignore  Cargo.toml  chains.markov
src/: chain.rs  main.rs  nop_tts.rs  training.rs  tts.rs  twitter.rs
