[package]
name = "markovify"
version = "0.1.0"
authors = ["Connor Hilarides <connorcpu@live.com>"]

[dependencies]
rand = "*"
regex = "*"
regex_macros = "*"
bincode = "*"
tweetust = "*"
hyper = "*"
rustc-serialize = "*"

[dependencies.winapi]
path = "../winapi-rs"
version = "*"

[dependencies.ole32-sys]
path = "../winapi-rs/lib/ole32-sys"
version = "*"
